<resources>
    <!--GENERAL-->
    <string name="app_name">Link 2 Band</string>
    <string name="UserName">UserName</string>
    <string name="Pass">Pass</string>
    <string name="Model">Model</string>
    <string name="Mail">Mail</string>
    <string name="LogInMethod">LogIn</string>
    <string name="RegistroMethod">Registro</string>
    <string name="BajaMethod">Baja</string>
    <string name="CambioMethod">Cambio</string>
    <string name="ConsultaMethod">Consulta</string>
    <string name="RecuperacionMethod">Recuperacion</string>
    <string name="ActualizarMethod">Actualizar</string>
    <string name="GetResultadoMethod">GetResultado</string>
    <string name="CerrarSesionMethod">CerrarSesion</string>
    <!-- Strings related to login -->
    <string name="title_activity_main">Inicio de sesión</string>
    <string name="prompt_username">Nombre de Usuario</string>
    <string name="prompt_userandmail">Nombre de Usuario o Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Entrar</string>
    <string name="label_register">¿No puedes acceder?</string>
    <string name="action_register">Crear una cuenta</string>
    <string name="action_recovery">Olvidé mi contraseña</string>
    <string name="prompt_entrar">Entrar</string>
    <!-- Strings related to register -->
    <string name="prompt_email">Correo Electrónico</string>
    <string name="prompt_repeatpass">Repite la contraseña</string>
    <string name="btn_listo">Listo</string>

    <string name="title_activity_principal">L2B Móvil</string>
    <!--Strings related to conectividad-->
    <string name="label_vinculados">Conectar con un dispositivo</string>
    <string name="label_available">Dispositivos disponibles</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">LogOut</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>


    <item name="visible" type="id" />
    <item name="masked" type="id" />
</resources>
